# cdmx-ecobici-data-platform

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dbt/: dbt_project.yml  profiles.yml
dbt/models/bronze/: bronze_station_status.sql
dbt/models/gold/dims/: dim_hour.sql  dim_time.sql
dbt/models/gold/facts/: fact_station_availability.sql  fact_station_hourly_target_proxy.sql
dbt/models/gold/marts/: mart_hourly_demand_proxy.sql  mart_station_hourly_target_training.sql
dbt/models/silver/: silver_station_status.sql
docs/: target_definition.md
feast_repo/feature_repo/: feature_store.yaml  station_features.py
notebooks/: 01_feature_engineering_starter.ipynb
src/ecobici_platform/: README.md
src/ecobici_platform/config/: settings.py
src/ecobici_platform/ingestion/: ecobici_batch.py  http_client.py  interfaces.py  sinks.py
tests/: test_ingestion_service.py  test_settings.py  test_sinks.py
