[tool.poetry]
name = "cdmx-ecobici-data-platform"
version = "0.1.0"
description = "Medallion data platform for Ecobici demand and availability analytics"
authors = ["Data Platform Team <data@example.com>"]
readme = "README.md"
packages = [{ include = "ecobici_platform", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dlt = "^1.10.0"
duckdb = "^1.3.0"
pandas = "^2.2.3"
pyarrow = "^20.0.0"
pydantic = "^2.11.0"
pydantic-settings = "^2.8.0"
requests = "^2.32.3"
tenacity = ">=8.2,<9.0"
feast = {extras = ["duckdb"], version = "^0.47.0"}
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.11.0"
pytest = "^8.3.0"
dbt-duckdb = "^1.9.2"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
